more reflection work plus random changes